--- a/2013年7月修订的研究生院规范撰写范例/contents/Cabstract.tex
+++ b/2013年7月修订的研究生院规范撰写范例/contents/Cabstract.tex
@@ -1,10 +1,8 @@
 % !Mode:: "TeX:UTF-8"
+% !Mode:: "TeX:UTF-8"
 
-\begin{Cabstract}{时域电磁散射}{时域积分方程}{时间步进算法}{后时不稳定性}{时域平面波算法}
-为了适应日益增长的宽带信号和非线性系统的工程应用，用于分析瞬态电磁
-散射问题的时域积分方程方法研究日趋活跃。本文以时域积分方程时间步进算法
-及其快速算法为研究课题，重点研究了时间步进算法的数值实现技术、后时稳定
-性问题以及两层平面波算法加速计算等，主要研究内容分为四部分。
 
-……
+
+\begin{Cabstract}{RT-Thread}{USB}{单片机}{按键精灵}{}
+本课题设计了一个基于RTOS智能USB 转接件。使用RT-Thread 作为系统的软件平台，两个STM32单片机作为硬件平台。通过一个自制的语法解释器，将用户可以随时自行编写的内部文件解释为键盘的过滤器，进而实现键盘的改键、键盘宏、宏录制等功能，进而增强用户对键盘的掌控能力，可以轻易实现复杂的键盘操作。本课题可看做windows 应用程序“按键精灵”的简易硬件实现。
 \end{Cabstract}
