--- a/2013年7月修订的研究生院规范撰写范例/contents/Eabstract.tex
+++ b/2013年7月修订的研究生院规范撰写范例/contents/Eabstract.tex
@@ -1,15 +1,5 @@
 % !Mode:: "TeX:UTF-8"
 
-\begin{Eabstract}{time-domain electromagnetic scattering}{time-domain integral equation
-(TDIE)}{marching-on in-time (MOT) scheme}{late-time instability}{plane
-wave time-domain (PWTD) algorithm}
-With the widespread engineering applications ranging from broadband signals and
-non-linear systems, time-domain integral equations (TDIE) methods for analyzing
-transient electromagnetic scattering problems are becoming widely used nowadays.
-TDIE-based marching-on-in-time (MOT) scheme and its fast algorithm are researched
-in this dissertation, including the numerical techniques of MOT scheme, late-time
-stability of MOT scheme, and two-level PWTD-enhanced MOT scheme. The contents
-are divided into four parts shown as follows.
-
-……
+\begin{Eabstract}{RT-Thread}{USB}{MCU}{QuickMacro}{}
+This paper design a RTOS-based intelligent USB adapter. Use RT-Thread as the software platform, two STM32 MCU as the hardware platform. through a DIY grammar interpreter, the user can always write your own internal documents interpreted as a keyboard filter, thus achieving change keyboard keys, keyboard macros, macro recording and other functions, and thus enhance the user's ability to control the keyboard, you can easily implement complex keyboard. This system can be seen as a hardware implementation of windows application "QuickMacro".
 \end{Eabstract}
