--- a/2013年7月修订的研究生院规范撰写范例/example.tex
+++ b/2013年7月修订的研究生院规范撰写范例/example.tex
@@ -1,9 +1,9 @@
 % !Mode:: "TeX:UTF-8"
 
-\documentclass[doctor]{uestcthesis}
+\documentclass[bachelor]{uestcthesis}
 \begin{document}
-\include{chapters/ChapterA}
-\include{chapters/ChapterB}
+\include{chapters/ch1}
+\include{chapters/ch2}
 \include{chapters/ChapterC}
 \include{chapters/ChapterD}
 \end{document}
