--- a/source/contents/reference.bib
+++ b/source/contents/reference.bib
@@ -1,11 +1,13 @@
 % !Mode:: "TeX:UTF-8"
 
-@book{chew2001fast,
-  title={Fast and efficient algorithms in computational electromagnetics},
-  author={Chew, Weng Cho and Michielssen, E and Song, JM and Jin, JM},
-  year={2000},
-  address={Boston},
-  publisher={Artech House, Inc.}
+@book{USBcomplete,
+	language =     {Chinese},
+  title={USB大全},
+  author={陈逸},
+  year={2001},
+  address={西安},
+  pages={110--115},
+  publisher={中国电力出版社}
 }
 
 @book{shengxinqing2004ji,
