ch2 3 appendix finished

--- a/source/example.tex
+++ b/source/example.tex
@@ -4,6 +4,5 @@
 \begin{document}
 \include{chapters/ch1}
 \include{chapters/ch2}
-\include{chapters/ChapterC}
-\include{chapters/ChapterD}
+\include{chapters/ch3}
 \end{document}
