--- a/source/contents/translation.tex
+++ b/source/contents/translation.tex
@@ -1,27 +1,40 @@
 % !Mode:: "TeX:UTF-8"
 
-\chapter{此名有诗意}
-\section{xxx}
-\subsection{xxx}
-\subsubsection{xxxx}
-\section{xxx}
-\subsection{xxx}
-\subsubsection{xxxx}
-英语单词“technology”来源于以字母$\tau\epsilon\chi\ldots\,$开头的希腊词根；并且这个希腊单词除了
-technology的意思外也有art的意思。因此，名称TEX是$\tau\epsilon\chi$的大写格式。
+\chapter{通用串行总线大全}
 
-在发音时，\TeX 的$\chi$的发音与希腊的chi一样，而不是“x”，所以\TeX 与blecchhh 押韵。“ch”
-听起来象苏格兰单词中的loch 或者德语单词中的ach；它在西班牙语中是“j”，在俄语中是“kh”。
-当你对着计算机正确读出时, 终端屏幕上可能有点雾。
+\section{时序约束与保证}
+通用串行总线2.0传输的令牌，数据和握手使用通用串行总线的数据包之间允许的延迟
+2都非常短，只允许电缆的延迟和
+开关延迟加上一小段时间来使硬件（而不是固件）来确定
+响应，比如数据或状态代码，以便响应接收到的数据包。
 
-这个发音练习是提醒你，\TeX 主要处理的是高质量的专业书稿：它的重点在艺术和专业方
-面, 就象希腊单词的含义一样。如果你仅仅想得到一个过得去——可读下去但不那么漂亮——的
-文书, 那么简单的系统一般就够用了。使用\TeX 的目的是得到最好的质量；这就要在细节上花功
-夫, 但是你不会认为它难到哪里去，并且你会为所完成的作品感到特别骄傲。
+在编写固件一个常见的错误是假定固件在准备发送到主机的数据之前应
+等待中断。相反，在主机请求数据之前，固件必须复制要发送的数据到端点缓冲，然后将端点配置为接收到IN令牌包后发送数据。
+一次通信完成后会发生中断。通信成功后，中断​​通知固件端点的缓冲区准备好存储下一份数据。
+如果固件发送初始数据之前等待，中断就不会发生，数据就不会传输。
 
-另一方面重要的是要注意到与\TeX 名称有关的另一件事: “E”是错位的。这个偏移“E”的标
-识提醒人们，\TeX 与排版有关，并且把\TeX 从其它系统的名称区别开来。实际上，TEX(读音为
-tecks)是Honeywell Information Systems 的极好的Text EXecutive处理器。因为这两个系统的
-名称读音差别很大，所以它们的拼写也不同。在计算机中表明\TeX 文件的正确方法，或者当所用
-的方式无法降低“E”时，就要写作“TeX”。这样, 就与类似的名称不会产生混淆, 并且为人们可以
-正确发音提供了条件。
+单个传输事务可以进行传输的数据量最大可以达到设备端点数据包最大包长。
+一个含有小于最大包长的数据量的数据包叫做短包。
+一次含有多个事务的传输可以占用多个帧或微帧，从而不必是连续的。
+例如，在一个512字节的全速批量传输中，一次事务最多传输64字节，所以将全部的
+数据需要至少8次事务，这可能发生在一个或多个帧。
+
+一个含有PID数据和错误检查位但是没有数据的数据包是零长度数据包。一个零长度数据包可以表示传输的结束或控制传输的成功完成。
+\section{分割传输}
+
+通用串行总线 2.0集线器与通用串行总线2.0主机使用高速传输，除非​​主机和集线器之间用的是通用串行总线1.x的集线器。
+当低或全速设备连接到通用串行总线2.0集线器，集线器之间的速度根据需要进行转换。
+但转换速度功能并不是集线器做管理多个速度时需要做的全部工作。
+高速是全速的40多倍，低速的320多倍。
+整个总线都等待集线器与设备之间传输低速和全速数据是没用任何意义的。
+
+解决的办法是分割事务。
+一个通用串行总线2.0主机使用分割事务的办法来在高速总线上与低速或全速设备通信。
+这将在低速或全速需要两种分割事务的时候成为一个单个事务:
+一个或更多的开始-分割事务来发送信息给设备，并且一个或多个完成-分割事务来从设备接收信息。
+有一个例外：同步输出事务不会使用完成分割事务，因为设备没有可以发送的数据。
+
+分割事务需要更多的事务来完成传输，但是使用更少的时间，因为它们最小化了等待低速和全速设备花费的时间。
+通用串行总线2.0主机和向上连接高速总线，向下连接低速设备的集线器会进行分割事务。
+主机是否使用分割事务对设备来说无所谓。
+对于主机，设备驱动和应用软件不必关心主机是否使用分割事务，因为协议是在更低层进行处理。
