--- a/source/contents/acknowledgements.tex
+++ b/source/contents/acknowledgements.tex
@@ -1,5 +1,10 @@
 % !Mode:: "TeX:UTF-8"
 
-在攻读博士学位期间，首先衷心感谢我的导师 XXX 教授，……
+本论文的写作前后历时约三个月，其间遇到了非常多的软件和硬件方面的难题。在此我要由衷感谢我的导师刘艺副教授，他在这三个月的时间里给予我细心的教导，让我能够顺利的解决遇到的各种问题，最终顺利完成毕业设计。
 
-……
+另外，我要感谢我的舍友王楷和王博，他们在我毕业设计期间给予了我非常多的鼓励，向我我提出了很多宝贵的建议。
+
+感谢我的家人，他们的理解、关爱和支持是我求学过程中的最大动力。
+
+
+
