--- a/source/contents/original.tex
+++ b/source/contents/original.tex
@@ -1,7 +1,8 @@
 % !Mode:: "TeX:UTF-8"
 
 \chapter{USB complete}
-
+\section{author}
+Jan Axelson
 \section{Timing Constraints and Guarantees}
 
 The allowed delays between the token, data, and handshake packets of a USB
