--- a/source/contents/translation.tex
+++ b/source/contents/translation.tex
@@ -1,7 +1,8 @@
 % !Mode:: "TeX:UTF-8"
 
 \chapter{通用串行总线大全}
-
+\section{作者}
+Jan Axelson
 \section{时序约束与保证}
 通用串行总线2.0传输的令牌，数据和握手使用通用串行总线的数据包之间允许的延迟
 2都非常短，只允许电缆的延迟和
