--- a/source/example.tex
+++ b/source/example.tex
@@ -3,8 +3,11 @@
 \documentclass[bachelor]{uestcthesis}
 \begin{document}
 \include{chapters/ch1}
+\include{chapters/ch1_5}
 \include{chapters/ch2}
 \include{chapters/ch3}
 \include{chapters/ch4}
+\include{chapters/ch5}
 \include{chapters/end}
+
 \end{document}
